--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.3",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.47.0",
-    "mysql2": "^3.6.3",
-    "multer": "^1.4.5-lts.1"
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "eslint": "8.48.0",
